Initial code commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-*.class
+# Idea files #
+.idea/workspace.xml
+.idea/tasks.xml
+*.iml
+*.ipr
+*.iws
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# Java files #
+*/target
+*/target/*
+*.class
